# my-kaggle-template

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: constants.py  engine.py  log.py  loss.py  metrics.py  optim.py  train_tools.py  utils.py  vis.py
src/exp/exp000/: config.py  dataset.py  models.py  preprocess.py  train.py  train_gbdt.py
test/: test_engine.py  test_loss.py  test_optim.py  test_utils.py
