# Ref
# 1. https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "compe"
description = "A solution for kaggle competition ."
version = "0.1.0"
authors = [{ name = "daikichiba9511", email = "daikichiba.tech.ml@gmail.com" }]
requires-python = ">= 3.10"

# Supposed that pytorch etc. has been installed by base image
dependencies = [
  # "pandas",
  # "polars",
  # "hvplot",
  # "pydantic",
  # "timm",
  # "joblib",
  # "scikit-learn",
  # "h5py",
  # "xgboost",
  # "lightgbm",
  # "transformers",
  # "accelerate",
  "accelerate>=1.1.1",
  "h5py>=3.12.1",
  "hvplot>=0.11.1",
  "joblib>=1.4.2",
  "lightgbm>=4.5.0",
  "numpy<2.0.0",
  "pandas>=2.2.3",
  "polars>=1.13.1",
  "pydantic>=2.9.2",
  "scikit-learn>=1.5.2",
  "timm>=1.0.11",
  "transformers>=4.46.2",
  "xgboost>=2.1.2",
]

[tool.uv]
dev-dependencies = [
  "japanize-matplotlib>=1.1.3",
  "jupyterlab>=4.3.0",
  "kaggle>=1.6.17",
  "matplotlib>=3.9.2",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.3",
  "seaborn>=0.13.2",
  "torchinfo>=1.8.0",
  "wandb>=0.18.7",
]

# pipの時はこっち
[project.optional-dependencies]
dev = [
  "matplotlib",
  "japanize-matplotlib",
  "seaborn",
  "wandb",
  "ruff",
  "pytest",
  "mypy",
  "jupyterlab",
  "quarto",
  "kaggle",
  "torchinfo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
preview = true
target-version = "py310"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
ignore = [
  "E203", # white space before ':', not compatible with black
  "E501", # line-length violation
  "B905", # zip iterator without strict parameter
]
unfixable = ["B"]
exclude = [
  "git",
  ".venv",
  "__pycache__",
  ".github",
  ".mypy_cache",
  ".vscode",
  ".pytest_cache",
  "notebooks",
  ".ipynb_checkpoints",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
show_error_context = true
incremental = false
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_incomplete_defs = true
warn_no_return = true
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]
